@@ -45,6 +45,7 @@ Change: Exercise LT.C43, clarify versions of the zero vector (Jake Rizzo)
 Change: Solution SLT.C27, "are" to "is" (Ashlen Isbell)
 Change: Rename Theorem NPNT as Theorem NPNF (Sam Webb)
 Change: Streamline the proof of Theorem NPNF
+Change: Expand Example CAEHW
 Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
 Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
 Typo: Exercise MM.T12, correct reference, reword slightly (Matt Fergoda)
